manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: demo
spec:
  selector:
    app: demo-web
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
